interpreter-janeklang/tests/bad/05_whileWithInt_1.janek
int main(){
    while(3){
        420;
    }
    return 0;
}